[tool.poetry]
name = "streamlit-ex"
version = "0.1.0"
description = "Шаблон Streamlit"
authors = ["Vladislav Komarov <67183850+AtariVC@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
pandas = "^2.2.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
